--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "description": "Test task for FIVE",
   "main": "index.js",
   "license": "ISC",
+  "homepage": "http://blind76.github.io/note-app",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack serve --mode development --open --hot --port 3000",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d public"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
@@ -27,16 +30,17 @@
     "@babel/preset-react": "^7.12.13",
     "babel-loader": "^8.2.2",
     "eslint": "^7.21.0",
-    "eslint-plugin-react": "^7.22.0",
-    "html-webpack-plugin": "^5.2.0",
-    "webpack": "^5.24.2",
-    "webpack-cli": "^4.5.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.3.0",
-    "eslint-plugin-react-hooks": "^2.3.0",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-prettier": "^3.1.0",
-    "prettier": "^1.17.1"
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^2.3.0",
+    "gh-pages": "^3.2.3",
+    "html-webpack-plugin": "^5.2.0",
+    "prettier": "^1.17.1",
+    "webpack": "^5.24.2",
+    "webpack-cli": "^4.5.0"
   }
 }
