--- a/package.json
+++ b/package.json
@@ -7,17 +7,19 @@
   "license": "ISC",
   "homepage": "http://blind76.github.io/note-app",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack serve --mode development --open --hot --port 3000",
     "build": "webpack --mode production",
     "predeploy": "yarn build",
-    "deploy": "gh-pages -d public"
+    "deploy": "gh-pages -d public",
+    "test": "yarn run jest",
+    "test:e2e": "yarn run jest --testPathPattern=.*e2e.test.js$"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
     "prop-types": "^15.7.2",
+    "puppeteer": "^10.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-markdown": "^7.1.0",
@@ -26,8 +28,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.13.8",
-    "@babel/preset-env": "^7.13.8",
-    "@babel/preset-react": "^7.12.13",
+    "@babel/preset-env": "^7.15.8",
+    "@babel/preset-react": "^7.14.5",
+    "babel-jest": "^27.3.1",
     "babel-loader": "^8.2.2",
     "eslint": "^7.21.0",
     "eslint-config-airbnb": "^17.1.0",
@@ -39,7 +42,9 @@
     "eslint-plugin-react-hooks": "^2.3.0",
     "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^5.2.0",
+    "jest": "^27.3.1",
     "prettier": "^1.17.1",
+    "react-test-renderer": "^17.0.2",
     "webpack": "^5.24.2",
     "webpack-cli": "^4.5.0"
   }
